// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`browserslist-to-esbuild > should no support android 4 1`] = `
[
  "chrome154",
]
`;

exports[`browserslist-to-esbuild > should work with android and ios 1`] = `
[
  "chrome154",
  "ios11",
]
`;

exports[`browserslist-to-esbuild > should work with ios 1`] = `
[
  "ios9",
]
`;

exports[`browserslist-to-esbuild > works by passing browsers as array 1`] = `
[
  "chrome109",
  "edge119",
  "firefox120",
  "ios15.6",
  "opera133",
  "safari18.5",
]
`;

exports[`browserslist-to-esbuild > works by passing browsers as string 1`] = `
[
  "chrome153",
  "edge153",
  "firefox156",
  "ie10",
  "ios26.6",
  "opera134",
  "safari26.6",
]
`;
